crates/aranya-policy-compiler/tests/data/commands/field_insertion_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `a` is defined multiple times
  |
2 | struct Bar { a int }
  |              - previous defintion here
...
6 |         a bool // Duplicate field `a`
  |         ^ re-defined here
